# todo_backend_api

./: .env  Cargo.toml  Dockerfile  README.md
src/: config.rs  errors.rs  lib.rs  main.rs
src/handlers/: auth.rs  mod.rs  todo.rs
src/middleware/: auth.rs  mod.rs  rate_limiter.rs
src/models/: auth.rs  mod.rs  todo.rs
src/routes/: auth_routes.rs  mod.rs  swagger.rs  todo_routes.rs
src/solana/: mod.rs
src/utils/: mod.rs  wallet.rs
tests/: todo_handlers_test.rs
