[package]
name = "todo_backend_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anchor-client = "0.28.0"
anchor-lang = "0.28.0"
base58 = "0.2.0"
derive_more = "0.99.17"
dotenv = "0.15.0"
ed25519-dalek = "1.0.1"
env_logger = "0.10.0"
futures = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.19"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
solana-client = "1.16.1"
solana-sdk = "1.16.1"
thiserror = "1.0.40"
tokio = { version = "1.29.1", features = ["full"] }
utoipa = { version = "3.3.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }
validator = { version = "0.16.1", features = ["derive"] }